# qubo_benchmarking

./: .env.example  .gitignore  D-Wave Hamiltonian matrix.py  General Transverse Field Ising Hamiltonian matrix.py  README.txt  Transverse Field Ising Hamiltonian Matrix.py  et --soft HEAD~1  paper.tex  pyproject.toml
3SAT/: 3SAT_to_QUBO.ipynb  Max3SAT.py  benchmark.ipynb  problem.ipynb  readme.md  result_analysis.ipynb  results_10_6_3.json  results_10_7_10.json  results_10_8_10_diff_problem.json  results_10_8_10_same_problem.json  results_final.json  results_gurobi_macos.json  results_test1.json  results_test2.json  results_test_530_Dwave.json  solver.py  utils.py
QAP/: benchmark.py  brute.py  brute_force.py  compare.py  graph.py  model.py  plot.ipynb  problem.ipynb  readme.md  report.ipynb  report_gurobi.ipynb  report_v4.ipynb  report_v5.ipynb  report_v6.ipynb  result.json  result_gurobi.json  result_v3.json  result_v4.json  result_v5.json  result_v6.json  run_compare.py  solvers.ipynb
QAP/old/: plot.ipynb  result_v2.json  (+1 more)
TSP/: .env.sample  benchmark.csv  benchmark.ipynb  benchmark.py  core.py  formulation.ipynb  graph.py  heuristic.ipynb  model.py  plot.py  problem.ipynb  problems.json  qiskit.ipynb  qiskit_tutorial.ipynb  quantum_computer.ipynb  readme.md  result.json  result2.json  result_gurobi_macos.json  result_old.json  result_proto.json  set_problem.py  solvers.ipynb  travelingsalesperson.py  utils.py
Utils/: .env.sample  __init__.py  fixstar_test.ipynb  graph.ipynb  graph.py  latex.py  measure.py  solvers.ipynb  solvers.py  solvers_test.ipynb
