[tool.poetry]
name = "qubo_benchmarking"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
qiskit = "^1.2.2"
qiskit-aer = "^0.15.1"
qiskit-algorithms = "^0.3.0"
qiskit-ibm-runtime = "^0.30.0"
qiskit-optimization = "^0.6.1"
numpy = "^2.1.1"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
pylatexenc = "^2.10"
amplify = "^1.2.1"
python-dotenv = "^1.0.1"
dwave-system = "^1.27.0"
scipy = "1.13.1"
notebook = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
